make apps work in Web IDE context
- add neo-app resource mapping
- modify bootstraps in index.html files

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8" />
 
 		<script id='sap-ui-bootstrap'
-			src='/ui5/latest/resources/sap-ui-core.js'
+			src='../resources/sap-ui-core.js'
 			data-sap-ui-theme='sap_bluecrystal'
 			data-sap-ui-libs='sap.m'
 			data-sap-ui-xx-bindingSyntax="complex"
